<resources>
    <string name="app_name">Drink.it</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_random_drink">Random Drinks</string>
    <string name="menu_favorite_drink">Favorite Drinks</string>
    <string name="menu_drink_info">Drink Info</string>
    <string name="menu_search_drink">Search Drink</string>
    <string name="drink_image_description">Drink image</string>
    <string name="ingredientes_label">Ingredients:</string>
    <string name="receita_label">Recipe:</string>
    <string name="copo_label">Glass Type:</string>
    <string name="categoria_label">Category:</string>
    <string name="recipe_button">Recipe</string>
    <string name="drink_recommendation">Here are 5 drinks for you:</string>
    <string name="sign_in_with_google">Sign in With Google</string>
    <string name="title">Drink.it</string>
    <string name="subtitle">Making the finest drinks</string>
    <string name="search_button">Search</string>
    <string name="drink_not_found_error_msg">Sorry, but we couldn\'t find the drink.</string>
    <string name="drinks_not_loaded_error_msg">Sorry, but we couldn\'t load the drinks.</string>
    <string name="database_error_msg">Error on database (Firebase)</string>
    <string name="my_favorite_drinks">My favorite Drinks</string>
    <string name="no_drinks">You haven\'t favorited a drink yet.</string>
    <string name="menu_about">About</string>
    <string name="thanks">Thanks for using Drink.it</string>
    <string name="dev1">Raul F. Mansur</string>
    <string name="sign_out">Sign Out</string>
    <string name="university">PUC-MG 2019</string>
    <string name="dev4">Iago A. Morgado</string>
    <string name="dev3">Leonardo V. Won Dollinger</string>
    <string name="dev2">Gabriel Lopes F.</string>
    <string name="app_developed_by">App developed by:</string>
</resources>
