<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_random"
            android:icon="@drawable/ic_dice"
            android:title="@string/menu_random_drink" />
        <item
            android:id="@+id/nav_favorite"
            android:icon="@drawable/ic_black_star"
            android:title="@string/menu_favorite_drink" />
        <item
            android:id="@+id/nav_search"
            android:icon="@drawable/ic_search"
            android:title="@string/menu_search_drink" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_left"
            android:title="@string/menu_about" />
    </group>
</menu>