<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical"
    tools:context=".screens.drink_info.DrinkInfoActivity">

    <ProgressBar
        android:id="@+id/apiLoadProgress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:visibility="visible" />

    <TextView
        android:id="@+id/errorMsg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:fontFamily="@font/raleway_regular"
        android:text="Não foi possível carregar o drink."
        android:textColor="@color/textColor"
        android:textSize="22sp"
        android:visibility="gone" />

    <ScrollView
        android:id="@+id/contentScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/fabFavorito"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end|top"
                android:layout_marginTop="16dp"
                android:layout_marginRight="16dp"
                android:clickable="true"
                android:src="@drawable/ic_star_border"
                app:backgroundTint="#00000000"
                app:borderWidth="0dp"
                app:elevation="0dp"
                app:fabSize="mini"
                app:hoveredFocusedTranslationZ="0dp"
                app:maxImageSize="48dp"
                app:pressedTranslationZ="0dp" />

            <ImageView
                android:id="@+id/drinkThumb"
                android:layout_width="250dp"
                android:layout_height="250dp"
                android:layout_gravity="center_horizontal"
                android:contentDescription="@string/drink_image_description" />

            <TextView
                android:id="@+id/strDrinkName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="32dp"
                android:fontFamily="@font/playfair_display_italic"
                android:textColor="@color/textColor"
                android:textSize="26sp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginTop="12dp"
                android:fontFamily="@font/raleway_regular"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/copoLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginLeft="16dp"
                    android:fontFamily="@font/raleway_regular"
                    android:paddingRight="4dp"
                    android:text="@string/copo_label"
                    android:textColor="@color/textColor"
                    android:textSize="22sp" />

                <TextView
                    android:id="@+id/strGlass"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/raleway_light"
                    android:textColor="@color/colorPrimary"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginTop="12dp"
                android:fontFamily="@font/raleway_regular"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/categoriaLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginLeft="16dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/raleway_regular"
                    android:paddingRight="4dp"
                    android:text="@string/categoria_label"
                    android:textColor="@color/textColor"
                    android:textSize="22sp" />

                <TextView
                    android:id="@+id/strAlcoholic"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/raleway_light"
                    android:textColor="@color/colorPrimary"
                    android:textSize="18sp" />
            </LinearLayout>

            <TextView
                android:id="@+id/ingredientesLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/raleway_regular"
                android:text="@string/ingredientes_label"
                android:textColor="@color/textColor"
                android:textSize="22sp" />

            <TextView
                android:id="@+id/strIngredients"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="16dp"
                android:fontFamily="@font/raleway_light"
                android:textColor="@color/textColor" />

            <TextView
                android:id="@+id/receitaLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/raleway_regular"
                android:text="@string/receita_label"
                android:textColor="@color/textColor"
                android:textSize="22sp" />

            <TextView
                android:id="@+id/strInstructions"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="20dp"
                android:fontFamily="@font/raleway_light"
                android:textColor="@color/textColor" />


        </LinearLayout>
    </ScrollView>

</LinearLayout>